--- a/apps/cart_pole_many/Makefile
+++ b/apps/cart_pole_many/Makefile
@@ -1,7 +1,7 @@
 CC = g++
 
-LIBS+= -L${SMARTIES_LIB} -lsmarties
-CPPFLAGS+= -std=c++14 -Wall -O2 -I${SMARTIES_INCLUDE}
+LIBS+= -L${SMARTIES_ROOT}/lib -lsmarties
+CPPFLAGS+= -std=c++14 -Wall -O2 -I${SMARTIES_ROOT}/include
 
 CPPFLAGS+= -Wextra -Wfloat-equal -Wundef -Wcast-align
 CPPFLAGS+= -Wwrite-strings -Wlogical-op -Wmissing-declarations -Wredundant-decls
