--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -106,7 +106,8 @@ OBJ_FILES = \
 	Profiler.o \
 	Master.o \
 	Worker.o \
-	Engine.o
+	Engine.o \
+	smarties_extern.o
 
 CPP_FILES = $(notdir $(OBJ_FILES:.o=.cpp))
 
@@ -128,9 +129,7 @@ smarties_pybind11.o:
 lib: $(OBJ_FILES)
 	mkdir -p ../lib
 	$(MPICXX) -shared -fPIC $(LDFLAGS) -o ../lib/libsmarties.so $^ $(LIBS)
-	@echo "Remember to update the environmental variables to include the smarties library like:"
-	@cd ../include && echo "echo 'export SMARTIES_INCLUDE=`pwd`' >> ~/.bash_profile"
-	@cd ../lib && echo "echo 'export SMARTIES_LIB=`pwd`' >> ~/.bash_profile"
+	@echo "Remember to update the environment variables to include the smarties library like:"
 	@cd ../ && echo "echo 'export SMARTIES_ROOT=`pwd`' >> ~/.bash_profile"
 
 #echo "echo 'export LD_LIBRARY_PATH=\"\$${LD_LIBRARY_PATH}:`pwd`\"' >> ~/.bash_profile"
@@ -150,7 +149,7 @@ py11: $(OBJ_FILES) smarties_pybind11.o
 exec: lib main.o
 	$(LD) $(LDFLAGS) -o rl main.o -L../lib/ -lsmarties
 
-all: lib
+all: lib py11
 
 main.o: ../source/main.cpp
 	$(MPICXX) $(extra) $(CPPFLAGS) -c $< -o $@
