--- a/apps/cart_pole_mpi/Makefile
+++ b/apps/cart_pole_mpi/Makefile
@@ -1,10 +1,8 @@
-CXX = g++
-
+CXX = mpic++
 
 #LDFLAGS+= -fopenmp
 LIBS+= -L${SMARTIES_ROOT}/lib -lsmarties
 CPPFLAGS+= -std=c++14 -Wall -O2 -I${SMARTIES_ROOT}/include
-#CPPFLAGS+= -std=c++14 -Wall -g -O0 -I${SMARTIES_ROOT}/include
 CPPFLAGS+= -Wextra -Wfloat-equal -Wundef -Wcast-align -Wno-unused-parameter
 CPPFLAGS+= -Wwrite-strings -Wlogical-op -Wmissing-declarations -Wredundant-decls
 CPPFLAGS+= -Wshadow -Woverloaded-virtual -Wuninitialized -Wno-div-by-zero
