--- a/apps/cart_pole_cpp/Makefile
+++ b/apps/cart_pole_cpp/Makefile
@@ -1,5 +1,7 @@
-CXX = g++
-
+CXX ?= g++
+ifneq ($(wildcard ${SMARTIES_ROOT}/extern/.*),)
+CXX=${SMARTIES_ROOT}/extern/bin/mpic++
+endif
 
 #LDFLAGS+= -fopenmp
 LIBS+= -L${SMARTIES_ROOT}/lib -lsmarties
