--- a/apps/predator_prey/Makefile
+++ b/apps/predator_prey/Makefile
@@ -1,4 +1,7 @@
-CC = g++
+CXX ?= g++
+ifneq ($(wildcard ${SMARTIES_ROOT}/extern/.*),)
+CXX=${SMARTIES_ROOT}/extern/bin/mpic++
+endif
 
 LIBS+= -L${SMARTIES_ROOT}/lib -lsmarties
 CPPFLAGS+= -std=c++14 -Wall -O2 -I${SMARTIES_ROOT}/include
@@ -25,13 +28,13 @@ endif
 .DEFAULT_GOAL := pp
 
 pp: $(OBJ_FILES)
-	$(CC) $(extra) $(LIBS) $^ -o $@
+	$(CXX) $(extra) $(LIBS) $^ -o $@
 
 %.o: %.cpp
-	$(CC) $(extra)  $(CPPFLAGS) -c $< -o $@
+	$(CXX) $(extra)  $(CPPFLAGS) -c $< -o $@
 
 %.d: %.cpp
-	$(CC) $(extra)  $(CPPFLAGS) -MD -c $<
+	$(CXX) $(extra)  $(CPPFLAGS) -MD -c $<
 
 #vpath %.cpp $(DIRS)
 #vpath %.h   $(DIRS)
