--- a/apps/cart_pole_distribEnv/Makefile
+++ b/apps/cart_pole_distribEnv/Makefile
@@ -1,5 +1,7 @@
-CXX = mpic++
-
+CXX ?= mpic++
+ifneq ($(wildcard ${SMARTIES_ROOT}/extern/.*),)
+CXX=${SMARTIES_ROOT}/extern/bin/mpic++
+endif
 
 #LDFLAGS+= -fopenmp
 LIBS+= -L${SMARTIES_ROOT}/lib -lsmarties
