--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ".")
 
 set(COMMON_SOURCES
     ${ROOT_FOLDER}/source/Learners/PPO.cpp
+    ${ROOT_FOLDER}/source/Learners/MixedPG.cpp
     ${ROOT_FOLDER}/source/Learners/NAF.cpp
     ${ROOT_FOLDER}/source/Learners/DPG.cpp
     ${ROOT_FOLDER}/source/Learners/DQN.cpp
@@ -107,9 +108,9 @@ set(COMMON_SOURCES
 )
 
 # GCC flags.
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -shared -fPIC")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wno-unused-parameter -Wno-maybe-uninitialized")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmax-errors=3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC") # -shared
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wno-unused-parameter")
+
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -O3 -march=native -fstrict-aliasing -ffast-math -falign-functions=32")
 set(CMAKE_CXX_EXTENSIONS OFF)  # -std=c++11, not -std=gnu++11!
@@ -126,6 +127,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 
 # OpenBLAS
+# if(FALSE) # OpenBLAS broken on Mac ...
 find_package(BLAS REQUIRED)
 find_path(BLAS_INCLUDE_DIRS cblas.h
   /usr/include
@@ -138,6 +140,7 @@ find_path(BLAS_INCLUDE_DIRS cblas.h
   $ENV{SMARTIES_ROOT}/extern/include)
 include_directories(${BLAS_INCLUDE_DIRS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_OPENBLAS")
+# endif() # ... OpenBLAS broken on Mac
 
 # Targets.
 if (COMPILE_SO)
