--- a/apps/cart_pole_cpp/CMakeLists.txt
+++ b/apps/cart_pole_cpp/CMakeLists.txt
@@ -4,6 +4,12 @@ if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.12.0")
   cmake_policy(SET CMP0074 OLD)
 endif()
 
+if (ENABLE_SANITIZER)
+  set(san_opt "-fsanitize=undefined")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${san_opt} -g")
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${san_opt}")
+endif()
+
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release" CACHE STRING
     "Choose the type of build, options are: Debug Release"
@@ -46,6 +52,9 @@ target_include_directories(exec PUBLIC "$ENV{SMARTIES_ROOT}/include/")
 target_link_directories(exec PUBLIC "$ENV{SMARTIES_ROOT}/lib/")
 target_link_libraries(exec PUBLIC smarties OpenMP::OpenMP_CXX MPI::MPI_CXX)
 
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
+target_link_libraries(exec PUBLIC atomic)
+endif()
 
 target_compile_features(exec PUBLIC cxx_std_14)
 target_compile_options(exec PRIVATE
