--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,9 @@ pp
 terminals.dat
 _deprecated*
 
+/lib
+/build
+/units/build
 /extern
 /source/Learners/Pytorch/__pycache__/
 /source/Learners/Pytorch/old_stuff.py
