1) multiple episodes can now be removed from the RM per grad step, applies when algorithm performs many timesteps per grad step and/or very short episode lengths 2) this implied change in how episodes are stores 3) cleanup of sampling algorithms 4) fixed for newer pybind11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ endif(NOT CMAKE_BUILD_TYPE)
 # List of options
 
 option(COMPILE_PY_SO "Compile Python bindings" ON)
+option(SINGLE_PRECISION "Use float32 for neural networks operations" ON)
 
 # Smarties library
 
@@ -86,6 +87,10 @@ target_compile_options(${smarties_core} PUBLIC
   $<$<CONFIG:Debug>:-O0;-g>
   $<$<CONFIG:Release>:-DNDEBUG;-O3;-ffast-math>
   )
+
+if (COMPILE_PY_SO)
+target_compile_options(${smarties_core} PUBLIC -DSINGLE_PREC)
+endif()
 
 # include flags
 # here interface since no internal source include the following directory
